fixed alignments

--- a/components/dice-component/dice.css
+++ b/components/dice-component/dice.css
@@ -6,17 +6,20 @@
     justify-content: center;
     align-items: center;
     margin: 5px;
-    background-color: #007bff; /* Azul para los dados principales */
+    background-color: #007bff;
+    /* Azul para los dados principales */
     color: white;
     border-radius: 10px;
-    transition: transform 0.6s ease-in-out; /* Transición suave */
+    transition: transform 0.6s ease-in-out;
+    /* Transición suave */
 }
 
 .history-dice {
     font-size: 20px;
     width: 30px;
     height: 30px;
-    background-color: #007bff; /* Azul para los dados en el historial */
+    background-color: #007bff;
+    /* Azul para los dados en el historial */
     margin: 5px;
     display: inline-block;
     border-radius: 10px;
@@ -24,11 +27,18 @@
 
 
 .dice.animate {
-    transform: rotate(360deg); /* Rotación del dado */
+    transform: rotate(360deg);
+    /* Rotación del dado */
 }
 
 .dice-container {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap; /* Para que los dados se ajusten automáticamente al espacio disponible */
+    flex-wrap: wrap;
+    /* Para que los dados se ajusten automáticamente al espacio disponible */
+}
+
+.dice-section {
+    margin-top: 2%;
+    margin-bottom: 8%;
 }
